try to fix shadow overflow

--- a/src/components/Burger/BurgerIngredient/BurgerIngredient.css
+++ b/src/components/Burger/BurgerIngredient/BurgerIngredient.css
@@ -7,6 +7,8 @@
   margin: 0 auto;
   position: relative;
   width: 75%;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .bread-bottom {
